# wheat_detection

./: README.md  clean_data.py  pyproject.toml
kaggle_wheat/: DataGenerator.py  main.py  model.py
kaggle_wheat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_kaggle_wheat.py
