[tool.poetry]
name = "kaggle-wheat"
version = "0.1.0"
description = ""
authors = ["JODLYO <joe.odonnell27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.2.0"
albumentations = "^0.4.5"
opencv-python = "^4.2.0"
matplotlib = "^3.2.2"
numpy = "^1.19.0"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
